; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_error.c_usbd_errstr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_error.c_usbd_errstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_ERR_MAX = common dso_local global i64 0, align 8
@usb_errstr_table = common dso_local global i8** null, align 8
@.str = private unnamed_addr constant [16 x i8] c"USB_ERR_UNKNOWN\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @usbd_errstr(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @USB_ERR_MAX, align 8
  %5 = icmp ult i64 %3, %4
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i8**, i8*** @usb_errstr_table, align 8
  %8 = load i64, i64* %2, align 8
  %9 = getelementptr inbounds i8*, i8** %7, i64 %8
  %10 = load i8*, i8** %9, align 8
  br label %12

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %11, %6
  %13 = phi i8* [ %10, %6 ], [ getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), %11 ]
  ret i8* %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
